# soffice-wrapper

./: .env.example  README.md  pyproject.toml  soffice_cli.py
.github/workflows/: publish-to-pypi.yml
soffice_wrapper/: __init__.py  soffice_wrapper.py
