[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soffice-wrapper"
version = "0.1.2"
description = "LibreOffice (soffice) 封装库，支持 Office 文档转 PDF"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["soffice_wrapper*"]
